enable debug for proxy

--- a/.circleci/config
+++ b/.circleci/config
@@ -3,9 +3,24 @@ clusters:
 - cluster:
     server: http://localhost:8080
   name: istio
+- cluster:
+    certificate-authority: /usr/local/google/home/panywei/.minikube/ca.crt
+    server: https://192.168.99.100:8443
+  name: minikube
 contexts:
 - context:
     cluster: istio
     user: ""
   name: istio
-current-context: istio
+- context:
+    cluster: minikube
+    user: minikube
+  name: minikube
+current-context: minikube
+kind: Config
+preferences: {}
+users:
+- name: minikube
+  user:
+    client-certificate: /usr/local/google/home/panywei/.minikube/client.crt
+    client-key: /usr/local/google/home/panywei/.minikube/client.key
