--- a/tools/deb/sidecar.env
+++ b/tools/deb/sidecar.env
@@ -40,7 +40,7 @@
 # ENVOY_USER=istio-proxy
 
 # Uncomment to enable debugging
-# ISTIO_AGENT_FLAGS="--proxyLogLevel debug"
+ISTIO_AGENT_FLAGS="--proxyLogLevel debug"
 
 # Directory for stdout redirection. The redirection is required because envoy attempts to open
 # /dev/stdout - must be a real file. Will be used for access logs. Additional config for logsaver
